bases/apps/games/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: wordle
    app.kubernetes.io/name: wordle
    app.kubernetes.io/service: wordle
  name: wordle
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: wordle
    app.kubernetes.io/name: wordle
  type: ClusterIP
