bases/apps/games/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: wordle
    app.kubernetes.io/name: wordle
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: wordle-ingress
spec:
  tls:
  - hosts:
    - wordle.local
    secretName: wordle-cert
  rules:
  - host: wordle.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordle
            port:
              name: http
